--- a/1.2-requests-templates/recipes/calculator/templates/calculator/index.html
+++ b/1.2-requests-templates/recipes/calculator/templates/calculator/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <title>Рецепты</title>
 </head>
+<h4> Я знаю рецепты таких блюд как: </h4>
 <body>
-{% for ingredient, amount in recipe.items %}
-    <p>{{ ingredient }}: {{ amount }}</p>
-{% empty %}
-    <p>Такого рецепта не знаю :(</p>
+{%for dish in data.keys %}
+<li> {{ dish }} </li>
 {% endfor %}
 </body>
 </html>
